; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_read_file.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_read_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@SEEK_END = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @read_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @read_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i32* @fopen(i8* %9, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %10, i32** %4, align 8
  store i64 0, i64* %5, align 8
  store i64 0, i64* %6, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %63

14:                                               ; preds = %1
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @SEEK_END, align 4
  %17 = call i32 @fseek(i32* %15, i64 0, i32 %16)
  %18 = load i32*, i32** %4, align 8
  %19 = call i64 @ftell(i32* %18)
  store i64 %19, i64* %7, align 8
  %20 = load i64, i64* %7, align 8
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %14
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @fclose(i32* %23)
  store i8* null, i8** %2, align 8
  br label %63

25:                                               ; preds = %14
  %26 = load i64, i64* %7, align 8
  store i64 %26, i64* %5, align 8
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @rewind(i32* %27)
  %29 = load i64, i64* %5, align 8
  %30 = add i64 %29, 1
  %31 = mul i64 1, %30
  %32 = trunc i64 %31 to i32
  %33 = call i64 @parson_malloc(i32 %32)
  %34 = inttoptr i64 %33 to i8*
  store i8* %34, i8** %8, align 8
  %35 = load i8*, i8** %8, align 8
  %36 = icmp ne i8* %35, null
  br i1 %36, label %40, label %37

37:                                               ; preds = %25
  %38 = load i32*, i32** %4, align 8
  %39 = call i32 @fclose(i32* %38)
  store i8* null, i8** %2, align 8
  br label %63

40:                                               ; preds = %25
  %41 = load i8*, i8** %8, align 8
  %42 = load i64, i64* %5, align 8
  %43 = load i32*, i32** %4, align 8
  %44 = call i64 @fread(i8* %41, i32 1, i64 %42, i32* %43)
  store i64 %44, i64* %6, align 8
  %45 = load i64, i64* %6, align 8
  %46 = icmp eq i64 %45, 0
  br i1 %46, label %51, label %47

47:                                               ; preds = %40
  %48 = load i32*, i32** %4, align 8
  %49 = call i64 @ferror(i32* %48)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %56

51:                                               ; preds = %47, %40
  %52 = load i32*, i32** %4, align 8
  %53 = call i32 @fclose(i32* %52)
  %54 = load i8*, i8** %8, align 8
  %55 = call i32 @parson_free(i8* %54)
  store i8* null, i8** %2, align 8
  br label %63

56:                                               ; preds = %47
  %57 = load i32*, i32** %4, align 8
  %58 = call i32 @fclose(i32* %57)
  %59 = load i8*, i8** %8, align 8
  %60 = load i64, i64* %6, align 8
  %61 = getelementptr inbounds i8, i8* %59, i64 %60
  store i8 0, i8* %61, align 1
  %62 = load i8*, i8** %8, align 8
  store i8* %62, i8** %2, align 8
  br label %63

63:                                               ; preds = %56, %51, %37, %22, %13
  %64 = load i8*, i8** %2, align 8
  ret i8* %64
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fseek(i32*, i64, i32) #1

declare dso_local i64 @ftell(i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @rewind(i32*) #1

declare dso_local i64 @parson_malloc(i32) #1

declare dso_local i64 @fread(i8*, i32, i64, i32*) #1

declare dso_local i64 @ferror(i32*) #1

declare dso_local i32 @parson_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
